--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,19 +8,19 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.cinemates.views.fragment.HomeFragment"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_detailedViewFragment"
             app:destination="@id/detailedViewFragment" />
         <action
             android:id="@+id/action_homeFragment_to_accountFragment"
-            app:destination="@id/accountFragment"/>
-        <action
-            android:id="@+id/action_homeFragment_to_discoverFragment"
-            app:destination="@id/discoverFragment" />
+            app:destination="@id/accountFragment" />
         <action
             android:id="@+id/action_homeFragment_to_movieDetailsActivity"
             app:destination="@id/movieDetailsActivity" />
+        <action
+            android:id="@+id/action_homeFragment_to_searchActivity"
+            app:destination="@id/searchActivity" />
     </fragment>
 
     <fragment
@@ -30,7 +30,7 @@
     <fragment
         android:id="@+id/moreFragment"
         android:name="com.example.cinemates.views.fragment.MoreFragment"
-        tools:layout="@layout/fragment_more" >
+        tools:layout="@layout/fragment_more">
         <action
             android:id="@+id/action_moreFragment_to_accountFragment"
             app:destination="@id/accountFragment" />
@@ -39,46 +39,34 @@
         android:id="@+id/detailedViewFragment"
         android:name="com.example.cinemates.views.fragment.DetailedViewFragment"
         android:label="{section}"
-        tools:layout="@layout/fragment_detailed_view" >
+        tools:layout="@layout/fragment_detailed_view">
         <action
             android:id="@+id/action_detailedViewFragment_to_homeFragment"
             app:destination="@id/homeFragment"
-            app:popUpTo="@id/homeFragment"/>
+            app:popUpTo="@id/homeFragment" />
         <argument
             android:name="section"
+            android:defaultValue="Section"
             app:argType="string"
-            app:nullable="true"
-            android:defaultValue="Section" />
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/accountFragment"
         android:name="com.example.cinemates.views.fragment.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
-    <fragment
-        android:id="@+id/discoverFragment"
-        android:name="com.example.cinemates.views.fragment.DiscoverFragment"
-        android:label="Explore"
-        tools:layout="@layout/fragment_discover" >
-        <action
-            android:id="@+id/action_discoverFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_discoverFragment_to_searchActivity"
-            app:destination="@id/searchActivity" />
-    </fragment>
     <activity
         android:id="@+id/movieDetailsActivity"
         android:name="com.example.cinemates.views.MovieDetailsActivity"
         android:label="activity_movie_details"
-        tools:layout="@layout/activity_movie_details" >
+        tools:layout="@layout/activity_movie_details">
         <argument
             android:name="movie"
             app:argType="com.example.cinemates.model.Movie" />
     </activity>
     <activity
         android:id="@+id/searchActivity"
-        android:name="com.example.cinemates.views.SearchActivity"
+        android:name="com.example.cinemates.views.fragment.SearchFragment"
         android:label="activity_search"
         tools:layout="@layout/activity_search" />
 </navigation>
