Generalizzata la classe Response

--- a/app/src/main/res/layout/fragment_detailed_view.xml
+++ b/app/src/main/res/layout/fragment_detailed_view.xml
@@ -25,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:listitem="@layout/list_item_media" />
+        tools:listitem="@layout/list_item_media_long" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
