update some views

--- a/app/src/main/res/layout/layout_poster_text_rating.xml
+++ b/app/src/main/res/layout/layout_poster_text_rating.xml
@@ -7,6 +7,7 @@
         <variable
             name="movie"
             type="com.example.cinemates.model.Movie" />
+        <import type="android.view.View"/>
     </data>
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,15 +22,29 @@
         app:cardCornerRadius="8dp"
         tools:showIn="@layout/list_item_media_poster">
 
-        <TextView
-            android:id="@+id/textRating"
-            android:layout_width="31dp"
-            android:layout_height="18dp"
-            android:text="@{String.valueOf(movie.vote_average)}"
-            android:textAlignment="center"
-            android:textColor="@color/alabaster"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            tools:text="7,0" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textRating"
+                android:layout_width="31dp"
+                android:layout_height="18dp"
+                android:text="@{String.valueOf(movie.vote_average)}"
+                android:textAlignment="center"
+                android:textColor="@color/alabaster"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                tools:text="7,0" />
+
+            <ImageView
+                android:visibility="@{movie.adult ? View.VISIBLE : View.GONE}"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_alignEnd="@id/textRating"
+                android:layout_alignBottom="@id/textRating"
+                android:src="@drawable/ic_baseline_whatshot_24" />
+
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </layout>
