update: activity actor details

--- a/app/src/main/res/layout/fragment_search_movie.xml
+++ b/app/src/main/res/layout/fragment_search_movie.xml
@@ -8,13 +8,14 @@
     <com.example.cinemates.util.RecyclerViewEmptySupport
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         android:layout_height="match_parent"
+        app:spanCount="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/list_item_media_long" />
+        tools:listitem="@layout/list_item_media_poster" />
 
     <include
         android:id="@+id/empty_view"
