--- a/app/src/main/res/layout/activity_actor_details.xml
+++ b/app/src/main/res/layout/activity_actor_details.xml
@@ -10,171 +10,199 @@
             type="com.example.cinemates.model.Actor" />
     </data>
 
-    <RelativeLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:context=".views.ActorDetailsActivity">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/ic_round_arrow_back_24"
-            app:title="@{actor.name}"
-            app:titleTextColor="@color/white"
-            tools:title="@tools:sample/full_names" />
+            android:layout_height="wrap_content">
 
-        <include
-            android:id="@+id/ivAvatar"
-            layout="@layout/layout_person_avatar"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@id/toolbar"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            app:path="@{actor.profile_path}" />
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/birthday"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/toolbar"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_toEndOf="@id/ivAvatar"
-            android:orientation="horizontal"
-            android:weightSum="100">
-
-            <TextView
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapse_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:text="Birthday"
-                android:textColor="@color/geyser"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:fitsSystemWindows="true"
+                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Small"
+                app:contentScrim="@color/lynch_100"
+                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
+                app:titleEnabled="false">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:text="@{actor.birthday}"
-                android:textColor="@color/alabaster"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                tools:text="@tools:sample/date/ddmmyy" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/birthPlace"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/birthday"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_toEndOf="@id/ivAvatar"
-            android:orientation="horizontal"
-            android:weightSum="100">
+                    <include
+                        android:id="@+id/ivAvatar"
+                        layout="@layout/layout_person_avatar"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="?attr/actionBarSize"
+                        app:path="@{actor.profile_path}" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:text="BirthPlace"
-                android:textColor="@color/geyser"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/birthday"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="?attr/actionBarSize"
+                        android:layout_marginEnd="20dp"
+                        android:layout_toEndOf="@id/ivAvatar"
+                        android:orientation="horizontal"
+                        android:weightSum="100">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:text="@{actor.place_of_birth}"
-                android:textColor="@color/alabaster"
-                android:textIsSelectable="true"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                tools:text="@tools:sample/lorem" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:text="Birthday"
+                            android:textColor="@color/geyser"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/knownAs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/birthPlace"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_toEndOf="@id/ivAvatar"
-            android:orientation="horizontal"
-            android:weightSum="100">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:text="@{actor.birthday}"
+                            android:textColor="@color/alabaster"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
+                            tools:text="@tools:sample/date/ddmmyy" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:text="Known As"
-                android:textColor="@color/geyser"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/birthPlace"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/birthday"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_toEndOf="@id/ivAvatar"
+                        android:orientation="horizontal"
+                        android:weightSum="100">
 
-            <com.borjabravo.readmoretextview.ReadMoreTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:textColor="@color/alabaster"
-                android:textIsSelectable="true"
-                android:textSize="14sp"
-                app:colorClickableText="@color/vermilion_100"
-                app:knowAs="@{actor.also_known_as}"
-                app:trimLength="50"
-                app:trimMode="trimModeLength"
-                tools:text="@tools:sample/lorem/random" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:text="BirthPlace"
+                            android:textColor="@color/geyser"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/biographyTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/knownAs"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Biography"
-            android:textColor="@color/geyser"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:text="@{actor.place_of_birth}"
+                            android:textColor="@color/alabaster"
+                            android:textIsSelectable="true"
+                            android:textSize="14sp"
+                            android:textStyle="bold"
+                            tools:text="@tools:sample/lorem" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <com.borjabravo.readmoretextview.ReadMoreTextView
-            android:id="@+id/readMoreTextV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/biographyTitle"
-            android:layout_margin="10dp"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/alabaster"
-            android:textSize="14sp"
-            app:colorClickableText="@color/vermilion_100"
-            app:description="@{actor.biography}"
-            app:trimLength="200"
-            app:trimMode="trimModeLength"
-            tools:text="@tools:sample/lorem/random" />
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/knownAs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/birthPlace"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_toEndOf="@id/ivAvatar"
+                        android:orientation="horizontal"
+                        android:weightSum="100">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:text="Known As"
+                            android:textColor="@color/geyser"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <com.borjabravo.readmoretextview.ReadMoreTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="50"
+                            android:textColor="@color/alabaster"
+                            android:textIsSelectable="true"
+                            android:textSize="14sp"
+                            app:colorClickableText="@color/vermilion_100"
+                            app:knowAs="@{actor.also_known_as}"
+                            app:trimLength="50"
+                            app:trimMode="trimModeLength"
+                            tools:text="@tools:sample/lorem/random" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+
+                    <TextView
+                        android:id="@+id/biographyTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/knownAs"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Biography"
+                        android:textColor="@color/geyser"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <com.borjabravo.readmoretextview.ReadMoreTextView
+                        android:id="@+id/readMoreTextV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/biographyTitle"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/alabaster"
+                        android:textSize="14sp"
+                        app:colorClickableText="@color/vermilion_100"
+                        app:description="@{actor.biography}"
+                        app:trimLength="200"
+                        app:trimMode="trimModeLength"
+                        tools:text="@tools:sample/lorem/random" />
+
+
+                </RelativeLayout>
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:navigationIcon="@drawable/ic_round_arrow_back_24"
+                    app:title="@{actor.name}"
+                    app:titleTextColor="@color/white"
+                    tools:title="@tools:sample/full_names" />
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="10dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="20dp"
             android:backgroundTint="@color/vermilion_100"
             android:src="@drawable/ic_baseline_favorite_border_24" />
 
         <com.example.cinemates.util.RecyclerViewEmptySupport
-            android:id="@+id/fab"
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/readMoreTextV"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             app:spanCount="3"
             tools:listitem="@layout/list_item_media_poster" />
-    </RelativeLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
