--- a/app/src/main/res/layout/activity_actor_details.xml
+++ b/app/src/main/res/layout/activity_actor_details.xml
@@ -113,6 +113,7 @@
                         android:layout_below="@id/birthPlace"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_toEndOf="@id/ivAvatar"
                         android:orientation="horizontal"
                         android:weightSum="100">
