--- a/app/src/main/res/layout/fragment_media_info.xml
+++ b/app/src/main/res/layout/fragment_media_info.xml
@@ -150,13 +150,22 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <com.example.cinemates.util.RecyclerViewEmptySupport
-                    android:id="@+id/recommended_recyclerView"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/list_item_media_poster" />
+                    android:layout_height="wrap_content">
+
+                    <com.example.cinemates.util.RecyclerViewEmptySupport
+                        android:id="@+id/recommended_recyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/list_item_media_poster" />
+
+                    <include
+                        android:id="@+id/empty_view_recommended"
+                        layout="@layout/layout_empty_recycler" />
+                </RelativeLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -167,13 +176,23 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <com.example.cinemates.util.RecyclerViewEmptySupport
-                    android:id="@+id/videos_recyclerView"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/list_item_yt_video" />
+                    android:layout_height="wrap_content">
+
+                    <com.example.cinemates.util.RecyclerViewEmptySupport
+                        android:id="@+id/videos_recyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/list_item_yt_video" />
+
+                    <include
+                        android:id="@+id/empty_view_videos"
+                        layout="@layout/layout_empty_recycler" />
+                </RelativeLayout>
+
             </androidx.appcompat.widget.LinearLayoutCompat>
 
 
