--- a/app/src/main/res/layout/section_row.xml
+++ b/app/src/main/res/layout/section_row.xml
@@ -20,7 +20,10 @@
             android:id="@+id/linearLayoutCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -33,7 +36,7 @@
                 android:textColor="@color/alabaster"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                tools:text="Section name" />
+                tools:text="@tools:sample/first_names" />
 
             <ImageView
                 android:id="@+id/actionOpenPage"
