--- a/app/src/main/res/layout/list_item_yt_video.xml
+++ b/app/src/main/res/layout/list_item_yt_video.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/thumbnailView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:loadThumbnail="@{video.key}"
                 android:scaleType="centerCrop"
                 tools:src="@tools:sample/backgrounds/scenic" />
 
