--- a/app/src/main/res/layout/fragment_media_reviews.xml
+++ b/app/src/main/res/layout/fragment_media_reviews.xml
@@ -13,4 +13,8 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/list_item_review" />
 
+    <include
+        android:id="@+id/empty_view"
+        layout="@layout/layout_empty_recycler" />
+
 </RelativeLayout>
