update search text color

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,8 @@
         <item name="android:windowBackground">@color/mirage_100</item>
         <!-- Apply default style for dialogs -->
         <item name="android:dialogTheme">@style/AppDialogTheme</item>
+        <item name="android:textColorHint">@color/geyser</item>
+
 
     </style>
 
