update color of edit text

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,7 @@
         <!-- Apply default style for dialogs -->
         <item name="android:dialogTheme">@style/AppDialogTheme</item>
         <item name="android:textColorHint">@color/geyser</item>
+        <item name="android:editTextColor">@color/white</item>
 
 
     </style>
