--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/discoverFragment"
         android:icon="@drawable/ic_outline_search_24"
-        android:iconTint="@color/white"
+        android:iconTint="@color/alabaster"
         android:title="Discover"
         app:showAsAction="always" />
 </menu>
