--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,65 +8,6 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.cinemates.views.fragment.HomeFragment"
-        tools:layout="@layout/fragment_home">
-        <action
-            android:id="@+id/action_homeFragment_to_detailedViewFragment"
-            app:destination="@id/detailedViewFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_accountFragment"
-            app:destination="@id/accountFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_movieDetailsActivity"
-            app:destination="@id/movieDetailsActivity" />
-        <action
-            android:id="@+id/action_homeFragment_to_searchActivity"
-            app:destination="@id/searchActivity" />
-    </fragment>
+        tools:layout="@layout/fragment_home"/>
 
-    <fragment
-        android:id="@+id/standardListsFragment"
-        android:name="com.example.cinemates.views.fragment.StandardListsFragment"
-        tools:layout="@layout/fragment_standard_lists" />
-    <fragment
-        android:id="@+id/moreFragment"
-        android:name="com.example.cinemates.views.fragment.MoreFragment"
-        tools:layout="@layout/fragment_more">
-        <action
-            android:id="@+id/action_moreFragment_to_accountFragment"
-            app:destination="@id/accountFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/detailedViewFragment"
-        android:name="com.example.cinemates.views.fragment.DetailedViewFragment"
-        android:label="{section}"
-        tools:layout="@layout/fragment_detailed_view">
-        <action
-            android:id="@+id/action_detailedViewFragment_to_homeFragment"
-            app:destination="@id/homeFragment"
-            app:popUpTo="@id/homeFragment" />
-        <argument
-            android:name="section"
-            android:defaultValue="Section"
-            app:argType="string"
-            app:nullable="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/accountFragment"
-        android:name="com.example.cinemates.views.fragment.AccountFragment"
-        android:label="fragment_account"
-        tools:layout="@layout/fragment_account" />
-    <activity
-        android:id="@+id/movieDetailsActivity"
-        android:name="com.example.cinemates.views.MovieDetailsActivity"
-        android:label="activity_movie_details"
-        tools:layout="@layout/activity_movie_details">
-        <argument
-            android:name="movie"
-            app:argType="com.example.cinemates.model.Movie" />
-    </activity>
-    <activity
-        android:id="@+id/searchActivity"
-        android:name="com.example.cinemates.views.fragment.SearchFragment"
-        android:label="activity_search"
-        tools:layout="@layout/activity_search" />
 </navigation>
