Pulizia del codice

--- a/app/src/main/res/layout/fragment_detail_media_content.xml
+++ b/app/src/main/res/layout/fragment_detail_media_content.xml
@@ -91,6 +91,7 @@
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:nestedScrollingEnabled="true"
             android:background="@color/mirage_100"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
