--- a/app/src/main/res/layout/section_row.xml
+++ b/app/src/main/res/layout/section_row.xml
@@ -31,6 +31,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:autoSizeMaxTextSize="24sp"
+                android:autoSizeMinTextSize="12sp"
+                android:autoSizeStepGranularity="2sp"
+                android:autoSizeTextType="uniform"
                 android:gravity="start"
                 android:text="@{section.sectionName}"
                 android:textColor="@color/alabaster"
@@ -43,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
-                android:layout_weight="1"
+                android:layout_weight="8"
                 android:scaleType="fitEnd"
                 android:src="@drawable/ic_outline_arrow_forward_24"
                 app:tint="@color/geyser" />
