Renaming section row and cleanup design

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,6 +38,6 @@
         android:layout_below="@id/toolbar"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/section_row" />
+        tools:listitem="@layout/list_item_section" />
 
 </RelativeLayout>
