--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -47,11 +47,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/author_avatar"
-                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:textColor="@color/alabaster"
                 android:textSize="14sp"
                 app:colorClickableText="@color/vermilion_100"
-                app:description="@{review.content}"
+                app:loadText="@{review.content}"
                 app:trimLength="200"
                 app:trimMode="trimModeLength"
                 tools:text="@tools:sample/lorem/random" />
