--- a/app/src/main/res/layout/activity_actor_details.xml
+++ b/app/src/main/res/layout/activity_actor_details.xml
@@ -49,7 +49,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="?attr/actionBarSize"
-                        android:layout_marginEnd="20dp"
                         android:layout_toEndOf="@id/ivAvatar"
                         android:orientation="horizontal"
                         android:weightSum="100">
@@ -67,10 +66,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="50"
-                            android:text="@{actor.birthday}"
                             android:textColor="@color/alabaster"
                             android:textSize="14sp"
-                            android:textStyle="bold"
+                            app:loadText="@{actor.birthday}"
                             tools:text="@tools:sample/date/ddmmyy" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -98,11 +96,10 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="50"
-                            android:text="@{actor.place_of_birth}"
                             android:textColor="@color/alabaster"
                             android:textIsSelectable="true"
                             android:textSize="14sp"
-                            android:textStyle="bold"
+                            app:loadText="@{actor.place_of_birth}"
                             tools:text="@tools:sample/lorem" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -111,6 +108,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/birthPlace"
+                        android:minHeight="50dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
@@ -128,9 +126,10 @@
                             android:textStyle="bold" />
 
                         <com.borjabravo.readmoretextview.ReadMoreTextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="50"
+                            android:textAlignment="textStart"
                             android:textColor="@color/alabaster"
                             android:textIsSelectable="true"
                             android:textSize="14sp"
@@ -165,7 +164,7 @@
                         android:textColor="@color/alabaster"
                         android:textSize="14sp"
                         app:colorClickableText="@color/vermilion_100"
-                        app:description="@{actor.biography}"
+                        app:loadText="@{actor.biography}"
                         app:trimLength="200"
                         app:trimMode="trimModeLength"
                         tools:text="@tools:sample/lorem/random" />
