--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/discoverFragment"
+        android:id="@+id/searchFragment"
         android:icon="@drawable/ic_outline_search_24"
-        android:iconTint="@color/alabaster"
+        android:iconTint="@color/geyser"
         android:title="Search"
         app:showAsAction="always" />
 </menu>
