--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,6 +8,14 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.cinemates.views.fragment.HomeFragment"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.cinemates.views.fragment.SearchFragment"
+        tools:layout="@layout/fragment_search" />
 
 </navigation>
