Solved search keyboard issues

--- a/app/src/main/res/menu/menu_change_layout.xml
+++ b/app/src/main/res/menu/menu_change_layout.xml
@@ -9,6 +9,7 @@
         android:title="List" />
     <item
         android:id="@+id/menu_switch_grid"
+        android:visible="false"
         android:icon="@drawable/ic_round_view_module_24"
         android:iconTint="@color/geyser"
         app:showAsAction="always"
