Adding bottom navigation view

--- a/app/src/main/res/navigation/movie_details_nav_graph.xml
+++ b/app/src/main/res/navigation/movie_details_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/detailMediaContentFragment"
-        android:name="com.example.cinemates.views.fragment.DetailMediaContentFragment"
+        android:name="com.example.cinemates.ui.fragment.DetailMediaContentFragment"
         android:label="DetailMediaContentFragment"
         tools:layout="@layout/fragment_detail_media_content">
         <argument
