--- a/app/src/main/res/layout/fragment_media_info.xml
+++ b/app/src/main/res/layout/fragment_media_info.xml
@@ -19,7 +19,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".views.fragment.MediaInfoFragment">
+            tools:context=".ui.fragment.MediaInfoFragment">
 
             <com.borjabravo.readmoretextview.ReadMoreTextView
                 android:id="@+id/readMoreTextV"
